--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,16 +1,17 @@
-project:
+project: 
   type: website
 
-website:
-  title: "Yingqi Wang"
-  navbar:
-    left:
+website: 
+  title: "Welcome to Yingqi's World ! 🌍"
+  navbar: 
+    right: 
       - href: index.qmd
         text: Home
       - about.qmd
-
-format:
-  html:
+      - example analysis.qmd
+      
+format: 
+  html: 
     theme: cosmo
     css: styles.css
     toc: true
