--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website: 
-  title: "Welcome to Yingqi's World ! 🌍"
+  title: "Welcome to Yingqi's World 🌍!"
   navbar: 
     right: 
       - href: index.qmd
